--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,12 +16,11 @@ div.botones-laterales {
 }
 
 h1{
-
-font-family: fantasy;
-color: black;
-font-size: 90px;
-text-align: center;
+    margin-top: 50px;
+    font-family: fantasy;
+    color: black;
 }
+
 h1:hover{
     color: rgb(225, 193, 111);
 }
